trunk/Archive2/27/a1cb7dd1b4f22f/main.cpp
struct B {};

struct D: private B {
    void f() {
        B& b = *this; // ok
    }
    friend void g();
};

void g() {
    B& b = *new D; // ok
}

int main() {
    B& b = *new D; // error
}